# scratch-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
src/: api.rs  args.rs  config_file.rs  main.rs  util.rs
